modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/dns-policy/rendered/test_samples/pods/002-example-disallowed-missing-dns-policy.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-missing-dns-policy
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    hostNetwork: true
