modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/dns-policy/rendered/test_samples/pods/004-example-allowed-without-hostnetwork.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-without-hostnetwork
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    dnsPolicy: ClusterFirst
    hostNetwork: false
