modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/dns-policy/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8dnspolicy
tests:
  - name: d8dnspolicy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: example-allowed
        object: test_samples/pods/001-example-allowed.yaml
        assertions:
          - violations: "no"
      - name: example-disallowed-missing-dns-policy
        object: test_samples/pods/002-example-disallowed-missing-dns-policy.yaml
        assertions:
          - message: Pod <disallowed-missing-dns-policy> with hostNetwork must have 'ClusterFirstWithHostNet' dnsPolicy
            violations: "yes"
      - name: example-disallowed-invalid-dns-policy
        object: test_samples/pods/003-example-disallowed-invalid-dns-policy.yaml
        assertions:
          - message: Pod <disallowed-invalid-dns-policy> with hostNetwork must have 'ClusterFirstWithHostNet' dnsPolicy
            violations: "yes"
      - name: example-allowed-without-hostnetwork
        object: test_samples/pods/004-example-allowed-without-hostnetwork.yaml
        assertions:
          - violations: "no"
